# interaction-predictor-mvp

./: .env.example  .gitignore  README.md  pyproject.toml
interaction_predictor/: __init__.py  app.py  camera.py  config.py  interaction_worker.py  kimi.py  llm.py  main.py  models.py  ollama.py  prompts.py  scene_worker.py  storage.py  utils.py  yolo_worker.py
interaction_predictor/web/: app.js  index.html  styles.css
quest-portal-package/: README.md  package.json  server.mjs  start.sh  stop.sh
quest-portal-package/config/: portal.config.json
quest-portal-package/public/: index.html  styles.css
quest-portal-package/public/game/: index.html
quest-portal-package/public/game/assets/: index-Ber1T3uz.js  xrImmersiveScene-B3qtTzLF.js
quest-portal-package/public/js/: home-stage.js
quest-portal-package/public/media/: ascii-hello-world.txt
quest-portal-package/public/scenes/: cinema.html  cinema.js  garage-ktv.html  garage-ktv.js
scripts/: deploy.sh  start.sh  stop.sh
